--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Construir y Publicar Imagen Docker
+name: CI/CD FastAPI Docker en Oracle Cloud
 
 on:
   push:
@@ -24,30 +24,34 @@ jobs:
 
       - name: Subir imagen a DockerHub
         run: docker push ${{ secrets.DOCKER_USER }}/backend_fastapi:latest
+
   deploy:
     needs: construir-y-publicar
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout del codigo (obtener el docker-compose.yml, setup_vm.sh)
-        uses: actions/checkout@v5
+      # 1️⃣ Descargar repositorio (para obtener docker-compose.yml y setup_vm.sh)
+      - name: Descargar repositorio
+        uses: actions/checkout@v3
 
-      #1 configurar acceso ssh
-      - name: configurar agente ssh
+      # 2️⃣ Configurar agente SSH
+      - name: Configurar agente SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #2 copiar el script de configuracion a la vm
-      - name: copiar script de configuracion a la vm
+
+      # 3️⃣ Copiar script de configuración a la VM
+      - name: Copiar script de configuración a la VM
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "setup_vm.sh"
-          target: "~/temp/"
-      #3 ejecutar el script de configuracion en la vm
-      - name: ejecutar script de instalacion de docker en la vm
+          target: "/home/${{ secrets.SSH_USER }}/temp/"
+
+      # 4️⃣ Ejecutar script de configuración en la VM
+      - name: Ejecutar script de instalación de Docker en la VM
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -57,19 +61,21 @@ jobs:
           script: |
             cd ~/temp
             chmod +x setup_vm.sh
-            ./setup_vm.sh ${{ secrets.DOCKER_USER }}
-            rm setup_vm.sh  # eliminar el script despues de usarlo
-      #4 copiar el docker-compose a la vm
-      - name: copiar docker-compose a la vm
+            ./setup_vm.sh ${{ secrets.SSH_USER }}
+            rm setup_vm.sh
+
+      # 5️⃣ Copiar docker-compose.yml a la VM
+      - name: Copiar docker-compose.yml a la VM
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
-          target: "~/home/${{ secrets.SSH_USER }}/deploy/"
-      #5 ejecutar docker-compose en la vm
-      - name: ejecutar docker-compose en la vm
+          target: "/home/${{ secrets.SSH_USER }}/deploy/"
+
+      # 6️⃣ Levantar contenedor FastAPI en la VM
+      - name: Levantar contenedor FastAPI
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -79,8 +85,13 @@ jobs:
           script: |
             DEPLOY_PATH=/home/${{ secrets.SSH_USER }}/deploy
             cd $DEPLOY_PATH
-            #DESCARGAR LA IMAGEN DE DOCKER HUB
-            echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
-            sudo docker pull 
-            sudo docker-compose up -d --force-recreate
-            sudo docker logout
+
+            # Login a Docker Hub y descargar la imagen
+            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
+            docker pull ${{ secrets.DOCKER_USER }}/backend_fastapi:latest
+
+            # Levantar contenedor con docker-compose
+            docker-compose up -d --force-recreate
+
+            docker logout
+
