--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -96,68 +96,37 @@ jobs:
   notificar-al-finalizar: # Nombre del trabajo cambiado a español y dependencia ajustada
     needs: [construir-y-publicar, desplegar] # ¡CORRECCIÓN CLAVE! Ahora espera a que 'desplegar' termine
     runs-on: ubuntu-latest
-    if: always() # Asegura que se ejecute incluso si un trabajo falla
-
     steps:
-      - name: Determinar el Estado de la Pipeline
-        id: check
-        run: |
-          # Obtenemos el resultado final de la dependencia directa más crítica (el despliegue)
-          # NOTA: Necesitas cambiar esto si quieres ver el resultado de 'desplegar'. 
-          # GitHub Actions no tiene un "resultado general" simple.
-          # Lo dejaremos en 'success' ya que el 'if: always()' asegura que notifique de cualquier manera.
-          # Para una lógica de notificación más robusta, se usaría `github.event.workflow_run.conclusion`.
-
-          # Si quieres que la notificación refleje el estado de DESPLEGAR:
-          JOB_STATUS="${{ needs.desplegar.result }}" 
+      - name: Enviar notificacion de despliegue a Gmail
+        # Usamos una acción popular de terceros para enviar correos SMTP
+        uses: dawidd6/action-send-mail@v3 
+        with:
+          # Configuración del servidor SMTP de Gmail
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
           
-          if [ "$JOB_STATUS" == "success" ]; then
-            STATUS_EMOJI="✅ Éxito"
-            COLOR="#22863a"
-          elif [ "$JOB_STATUS" == "failure" ]; then
-            STATUS_EMOJI="🚨 Fallo en Despliegue"
-            COLOR="#cf222e"
-          else
-            STATUS_EMOJI="⚠️ Estado Desconocido"
-            COLOR="#ff8000"
-          fi
+          # Credenciales de Gmail (usando los Secrets de GitHub)
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
           
-          echo "STATUS_EMOJI=$STATUS_EMOJI" >> $GITHUB_ENV
-          echo "COLOR=$COLOR" >> $GITHUB_ENV
+          # Destinatario y Remitente
+          to: 'el.destinatario@gmail.com' # El correo que debe recibir la notificación
+          from: ${{ secrets.MAIL_USERNAME }} # Opcional: Para que el remitente sea tu mismo Gmail
           
-      - name: Enviar Correo de Notificación (Usando Google Apps Script Webhook)
-        run: |
-          # 1. Definir el cuerpo HTML del correo
-          HTML_BODY=$(cat <<EOF
-          <html>
-            <head>
-              <style>
-                .status-box { background-color: ${{ env.COLOR }}; color: white; padding: 10px; border-radius: 5px; font-weight: bold; }
-              </style>
-            </head>
-            <body>
-              <p>Hola,</p>
-              <p>La pipeline de CI/CD para <b>${{ github.repository }}</b> ha finalizado El proceso de deploy.</p>
-              <div class="status-box">ESTADO: ${{ env.STATUS_EMOJI }}</div>
-              <p>Revisa la ejecución completa aquí: <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">${{ github.run_id }}</a></p>
-              <p>Saludos desde GitHub Actions.</p>
-            </body>
-          </html>
-          EOF
-          )
-                    
-                    # 2. Construir el payload JSON para el Webhook
-                    JSON_PAYLOAD=$(cat <<EOF
-          {
-            "to": "abdelpre18@gmail.com", 
-            "subject": "[${{ env.STATUS_EMOJI }}] Notificación de CI/CD: ${{ github.repository }}",
-            "body": "$HTML_BODY"
-          }
-          EOF
-          )
-                    
-                    # 3. Enviar la petición POST al Webhook
-                    curl -s -X POST \
-                      -H "Content-Type: application/json" \
-                      -d "$JSON_PAYLOAD" \
-                      "${{ secrets.GMAIL_APP_SCRIPT_URL }}" # URL del Google Apps Script
+          # Asunto del correo
+          subject: | # Usa | para contenido multi-línea
+            ✅ Despliegue completado | ${{ github.repository }} | Estatus: ${{ job.status }}
+          
+          # Cuerpo del correo (puedes usar HTML para un mejor formato)
+          body: |
+            El flujo de trabajo **${{ github.workflow }}** se ha ejecutado con éxito.
+            
+            **Detalles del Despliegue:**
+            - Repositorio: ${{ github.repository }}
+            - Commit: ${{ github.sha }}
+            - Estatus: **${{ job.status }}**
+            - Enlace al log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            
+          # Condición importante: Se ejecutará siempre, sea éxito o fallo
+          if: always() 
